--- a/main.tex
+++ b/main.tex
@@ -743,10 +743,200 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
     How many re-establishment fees does the applicant need to pay? 
 
 \end{enumerate}
+ \section{October 27, 2025}
+
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    B4-02 \quad T/F question (Basic selection) \\
+    Today is late February 2025. A Dutchman living in Sweden wishes to file a European patent application at the EPO in Munich via a Polish friend, who is a European patent attorney.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to file the European patent application in Dutch.
+            \item The Dutchman is entitled to file the European patent application in Swedish.
+            \item The Dutchman is entitled to file the European patent application in Polish.
+            \item The Dutchman is entitled to file the European patent application in German.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into English is filed at the same time.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Swedish, and a translation into English is filed at the same time.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Polish, and a translation into English is filed at the same time.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in German, and a translation into English is filed at the same time.
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 20\% of the filing fee, including a 20\% reduction of any "page fees".
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 30\% of the filing fee, including a 30\% reduction of any "page fees".
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 50\% of the filing fee, including a 50\% reduction of any “page fees".
+            \item The Dutchman is (also) entitled to a reduction of the filing fee under R.7a(3) when the European patent application is filed in any language, and, where applicable, a translation into an official EPO language is filed at the same time.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into French is filed at the same time.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into German is filed at the same time.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into English is filed a week later.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in English, and a translation into Dutch is filed a week later.
+        \end{enumerate}
+        
+        \item \textit{Upon filing the EP application in Dutch by the Polish friend, the friend also pays all necessary fees.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed at own motion, without an invitation from the EPO, one week later.
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed six weeks of filing the application.
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed three months after of filing the application.
+            \item If no translation is filed within 1 month of filing the EP application in Dutch, the EPO will issue an invitation to file a translation into an official EPO language within a time limit of two months.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 2
+    B4-07
+    \begin{enumerate}[label=(\alph*)]
+        \item Which documents filed after filing the European patent application may a Dutch person file in Dutch?
+        \item Must a translation be filed? In what language? What period applies?
+        \item What is the consequence if a required translation is not filed?
+    \end{enumerate}
+
+    \item % Question 3
+    B4-08 \quad T/F question (Basic selection) \\
+    A European patent EP1 has been granted in English.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Mr. Jansen, a Dutch national living in the Netherlands, wants to file an opposition against European patent EP1. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mr. Jansen may file the notice of opposition in Dutch.
+            \item Mr. Jansen may file the notice of opposition in English.
+            \item Mr. Jansen may file the notice of opposition in German.
+            \item Mr. Jansen may file the notice of opposition in Chinese.
+            \item Mr. Jansen may file the notice of opposition in Korean.
+        \end{enumerate}
+        
+        \item Mr. Xiao, a Chinese national living in the Netherlands, wants to file an opposition against European patent EP1. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mr. Xiao may file the notice of opposition in Dutch.
+            \item Mr. Xiao may file the notice of opposition in English.
+            \item Mr. Xiao may file the notice of opposition in German.
+            \item Mr. Xiao may file the notice of opposition in Chinese.
+            \item Mr. Xiao may file the notice of opposition in Korean.
+        \end{enumerate}
+        
+        \item Mrs. Lee, a Korean national living in Korea, wants to file an opposition against European patent EP1 via Mr. Koch, her European patent attorney based in Munich. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mrs. Lee may file the notice of opposition in Dutch through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in English through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in German through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in Chinese through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in Korean through Mr. Koch.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 4
+    B4-13 \quad T/F question (Advanced selection) \\
+    A European patent application has been filed in Swedish by a Danish applicant living in Sweden. A translation of the patent application into English was duly filed. In reply to a communication from the Examining Division setting a period of 4 months to respond, the applicant files, on the last day of the period:
+    \begin{itemize}
+        \item a letter with his observations in Danish,
+        \item in an Annex amendments to the claims in Swedish, and 
+        \item in a further Annex as evidence a Japanese patent application in Japanese.
+    \end{itemize}
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement with regard to the letter is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The letter is filed in a non-admissible language, so the letter is deemed not filed.
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into English.
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the letter is deemed not filed.
+            \item If the applicant fails to file a translation of the letter nor of the claims within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement with regard to the Annex with amendments to the claims is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The claims are filed in a non-admissible language, so the amended claims are deemed not filed.
+            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into English.
+            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the amended claims are deemed not filed.
+            \item If the applicant fails to file a translation of the claims nor of the letter within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement with regard to the Annex with the Japanese patent application is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Japanese patent application is filed in a non-admissible language, so the Japanese patent application is deemed not filed.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into English.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the Japanese patent application is deemed not filed.
+            \item If the applicant fails to file a translation within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 5
+    B4-17 (Basic selection) \\
+    An Italian applicant files two European patent applications, EP1, which claims the priority of Italian application IT1, and EP2, which claims the priority of Italian application IT2. 
+    EP1 is filed in Italian and is identical to IT1. An English translation of EP1 is supplied to the EPO two weeks later.
+    EP2 is filed in English. It is the translation of IT2. 
+    During the examination procedure, the English texts of EP1 and EP2 are found to contain translation errors.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Would it be possible to correct these errors for EP1?
+        \item Would it be possible to correct these errors for EP2?
+    \end{enumerate}
+
+    \item % Question 6
+    B5-08 \quad T/F question (Basic selection) \\
+    A Dutch national lives in the USA and wishes to file a European patent application.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative for filing a European patent application in Dutch at the EPO, but he can do so.
+            \item He does not need to appoint a professional representative for filing a European patent application in English at the EPO, but he can do so.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO, but he can do so.
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO if he pays the fees simultaneously with filing the application, but he shall appoint a professional representative when the fees are paid later.
+            \item He is obliged to let a professional representative pay the filing fee and search fee to the EPO.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national living in the USA files a European patent application at the EPO in Dutch.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a translation in English 3 weeks after the filing date, but he can do so.
+            \item He does not need to appoint a professional representative when he files a translation in English simultaneously with filing the application in Dutch.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national files only a fully completed request form, but does not file a description nor a reference to a previously filed application, nor any claims.} \\
+        For the statement below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a description 5 days after having filed the request form.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national files only a fully completed request form as well as a description but no claims.} \\
+        For the statement below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a set of claims 5 days after having filed the request form.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 7
+    B5-09 (Basic selection) \\
+    Who is deemed to be the common representative for a European patent application with three applicants, where no common representative has been appointed, in the following situations?
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item All applicants are from a Contracting State and none has appointed a professional representative.
+        \item All applicants are from a Contracting State and applicant 3 has appointed a professional representative.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; no professional representative has been appointed.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 1 has appointed a professional representative.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 3 has appointed a professional representative.
+    \end{enumerate}
+
 \end{enumerate}
-
-
-
+\end{enumerate}
 
 \begin{center}
 
@@ -1167,6 +1357,199 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     Examination fee -- 1\\
     \texttt{RE} fee is always a \underline{flat fee of \textsc{750 eur}}. 
     
+\end{enumerate}
+\section{October 27, 2025}
+
+
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+    B4-02 \quad T/F question (Basic selection) \\
+    Today is late February 2025. A Dutchman living in Sweden wishes to file a European patent application at the EPO in Munich via a Polish friend, who is a European patent attorney.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to file the European patent application in Dutch. --- \textbf{True}.
+            \item The Dutchman is entitled to file the European patent application in Swedish.  --- \textbf{True}.
+            \item The Dutchman is entitled to file the European patent application in Polish.  --- \textbf{True}.
+            \item The Dutchman is entitled to file the European patent application in German.  --- \textbf{True}.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into English is filed at the same time. --- \textbf{True}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Swedish, and a translation into English is filed at the same time. --- \textbf{True}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Polish, and a translation into English is filed at the same time. --- \textbf{False}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in German, and a translation into English is filed at the same time. --- \textbf{False}.
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 20\% of the filing fee, including a 20\% reduction of any "page fees".  --- \textbf{False}.
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 30\% of the filing fee, including a 30\% reduction of any "page fees". --- \textbf{True}.
+            \item The reduction of the filing fee that the Dutchman is entitled to under R.7a(1) if the relevant requirements as to languages, translations and time limits are met is 50\% of the filing fee, including a 50\% reduction of any “page fees". --- \textbf{False}.
+            \item The Dutchman is (also) entitled to a reduction of the filing fee under R.7a(3) when the European patent application is filed in any language, and, where applicable, a translation into an official EPO language is filed at the same time. --- \textbf{False}.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into French is filed at the same time. --- \textbf{True}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into German is filed at the same time. --- \textbf{True}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in Dutch, and a translation into English is filed a week later. --- \textbf{True}.
+            \item The Dutchman is entitled to a reduction of the filing fee under R.7a(1) when the European patent application is filed in English, and a translation into Dutch is filed a week later. --- \textbf{False}.
+        \end{enumerate}
+        
+        \item \textit{Upon filing the EP application in Dutch by the Polish friend, the friend also pays all necessary fees.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed at own motion, without an invitation from the EPO, one week later.--- \textbf{True}.
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed six weeks of filing the application. --- \textbf{True}.
+            \item The EP application is validly filed when the EP application is filed in Dutch, and a translation into English is filed three months after of filing the application. --- \textbf{False}.
+            \item If no translation is filed within 1 month of filing the EP application in Dutch, the EPO will issue an invitation to file a translation into an official EPO language within a time limit of two months. --- \textbf{True}??? \textsc{what is legal basis for 1 month???}.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 2
+    B4-07
+    \begin{enumerate}[label=(\alph*)]
+        \item Which documents filed after filing the European patent application may a Dutch person file in Dutch?
+        \item Must a translation be filed? In what language? What period applies?
+        \item What is the consequence if a required translation is not filed?
+    \end{enumerate}
+
+    \item % Question 3
+    B4-08 \quad T/F question (Basic selection) \\
+    A European patent EP1 has been granted in English.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Mr. Jansen, a Dutch national living in the Netherlands, wants to file an opposition against European patent EP1. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mr. Jansen may file the notice of opposition in Dutch.
+            \item Mr. Jansen may file the notice of opposition in English.
+            \item Mr. Jansen may file the notice of opposition in German.
+            \item Mr. Jansen may file the notice of opposition in Chinese.
+            \item Mr. Jansen may file the notice of opposition in Korean.
+        \end{enumerate}
+        
+        \item Mr. Xiao, a Chinese national living in the Netherlands, wants to file an opposition against European patent EP1. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mr. Xiao may file the notice of opposition in Dutch.
+            \item Mr. Xiao may file the notice of opposition in English.
+            \item Mr. Xiao may file the notice of opposition in German.
+            \item Mr. Xiao may file the notice of opposition in Chinese.
+            \item Mr. Xiao may file the notice of opposition in Korean.
+        \end{enumerate}
+        
+        \item Mrs. Lee, a Korean national living in Korea, wants to file an opposition against European patent EP1 via Mr. Koch, her European patent attorney based in Munich. \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item Mrs. Lee may file the notice of opposition in Dutch through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in English through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in German through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in Chinese through Mr. Koch.
+            \item Mrs. Lee may file the notice of opposition in Korean through Mr. Koch.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 4
+    B4-13 \quad T/F question (Advanced selection) \\
+    A European patent application has been filed in Swedish by a Danish applicant living in Sweden. A translation of the patent application into English was duly filed. In reply to a communication from the Examining Division setting a period of 4 months to respond, the applicant files, on the last day of the period:
+    \begin{itemize}
+        \item a letter with his observations in Danish,
+        \item in an Annex amendments to the claims in Swedish, and 
+        \item in a further Annex as evidence a Japanese patent application in Japanese.
+    \end{itemize}
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement with regard to the letter is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The letter is filed in a non-admissible language, so the letter is deemed not filed.
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into English.
+            \item A translation of the letter has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the letter is deemed not filed.
+            \item If the applicant fails to file a translation of the letter nor of the claims within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement with regard to the Annex with amendments to the claims is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The claims are filed in a non-admissible language, so the amended claims are deemed not filed.
+            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into English.
+            \item A translation of the amended claims has to be filed within 1 month of filing the amended claims. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the amended claims are deemed not filed.
+            \item If the applicant fails to file a translation of the claims nor of the letter within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement with regard to the Annex with the Japanese patent application is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The Japanese patent application is filed in a non-admissible language, so the Japanese patent application is deemed not filed.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into English.
+            \item A translation of the Japanese patent application has to be filed within 1 month of filing the letter. The translation has to be into any one of English, French or German.
+            \item If the applicant fails to file a translation within the required time limit, the Japanese patent application is deemed not filed.
+            \item If the applicant fails to file a translation within the required time limit, the application is deemed withdrawn.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 5
+    B4-17 (Basic selection) \\
+    An Italian applicant files two European patent applications, EP1, which claims the priority of Italian application IT1, and EP2, which claims the priority of Italian application IT2. 
+    EP1 is filed in Italian and is identical to IT1. An English translation of EP1 is supplied to the EPO two weeks later.
+    EP2 is filed in English. It is the translation of IT2. 
+    During the examination procedure, the English texts of EP1 and EP2 are found to contain translation errors.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Would it be possible to correct these errors for EP1?
+        \item Would it be possible to correct these errors for EP2?
+    \end{enumerate}
+
+    \item % Question 6
+    B5-08 \quad T/F question (Basic selection) \\
+    A Dutch national lives in the USA and wishes to file a European patent application.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative for filing a European patent application in Dutch at the EPO, but he can do so.
+            \item He does not need to appoint a professional representative for filing a European patent application in English at the EPO, but he can do so.
+        \end{enumerate}
+        
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO, but he can do so.
+            \item He does not need to appoint a professional representative for paying the filing fee and search fee to the EPO if he pays the fees simultaneously with filing the application, but he shall appoint a professional representative when the fees are paid later.
+            \item He is obliged to let a professional representative pay the filing fee and search fee to the EPO.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national living in the USA files a European patent application at the EPO in Dutch.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a translation in English 3 weeks after the filing date, but he can do so.
+            \item He does not need to appoint a professional representative when he files a translation in English simultaneously with filing the application in Dutch.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national files only a fully completed request form, but does not file a description nor a reference to a previously filed application, nor any claims.} \\
+        For the statement below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a description 5 days after having filed the request form.
+        \end{enumerate}
+        
+        \item \textit{The Dutch national files only a fully completed request form as well as a description but no claims.} \\
+        For the statement below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item He does not need to appoint a professional representative when he files a set of claims 5 days after having filed the request form.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 7
+    B5-09 (Basic selection) \\
+    Who is deemed to be the common representative for a European patent application with three applicants, where no common representative has been appointed, in the following situations?
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item All applicants are from a Contracting State and none has appointed a professional representative.
+        \item All applicants are from a Contracting State and applicant 3 has appointed a professional representative.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; no professional representative has been appointed.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 1 has appointed a professional representative.
+        \item Applicant 1 and 3 are from a Contracting State; applicant 2 is a US company; applicant 3 has appointed a professional representative.
+    \end{enumerate}
+
 \end{enumerate}
 \end{enumerate}
 
